Remove admin code smells